2009-01-27  Daniel Kraft  <d@domob.eu>

PR fortran/38883
	* trans-stmt.c (gfc_conv_elemental_dependencies):  Create temporary
	for the real type needed to make it work for subcomponent-references.

2009-01-27  Daniel Kraft  <d@domob.eu>

	PR fortran/38883
	* gfortran.dg/mvbits_6.f90:  New test.
	* gfortran.dg/mvbits_7.f90:  New test.
	* gfortran.dg/mvbits_8.f90:  New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143707 138bc75d-0d04-0410-961f-82ee72b054a4